# similar_to_previous_values

./: README.md  pyproject.toml
test/: test_validator.py
tests/: test_validator.py
validator/: __init__.py  main.py  post-install.py
